@@ -4,6 +4,9 @@
 
  Changes between 1.0.1 and 1.1.0  [xx XXX xxxx]
 
+  *) Add support for canonical generation of DSA parameter 'g'. See 
+     FIPS 186-3 A.2.3.
+
   *) Add support for HMAC DRBG from SP800-90. Update algorithm and POST
      to handle HMAC cases.
      [Steve Henson]
